crates/awbrn-map/tests/snapshots/map_document__162795-content.snap
---
source: crates/awbrn-map/tests/map_document.rs
expression: document.content_preimage()
---
awbrn-map-content-v1
{"width":27,"height":21,"terrain":[1,36,1,1,1,32,1,3,34,1,1,34,1,36,1,34,1,1,34,3,1,31,1,1,1,36,1,112,1,1,2,34,28,34,18,15,15,19,1,3,3,3,1,18,15,15,19,34,28,34,2,1,1,112,1,2,1,1,1,26,15,20,3,107,16,2,2,3,2,2,16,107,3,21,15,26,1,1,1,2,1,34,39,2,1,42,26,1,1,34,116,21,19,2,35,2,18,20,116,34,1,1,26,47,1,2,44,34,15,19,1,3,7,9,1,1,16,103,108,16,3,1,3,16,110,106,16,1,1,10,8,3,1,18,15,39,21,19,7,9,34,18,15,20,1,34,21,19,95,18,20,34,1,21,15,19,34,10,8,18,20,44,1,1,16,14,4,4,27,8,1,1,3,2,21,22,20,2,3,1,1,7,27,4,4,12,16,1,1,1,1,21,26,19,34,21,26,34,1,3,3,2,16,2,3,3,1,34,26,20,34,18,26,20,1,1,1,1,1,5,21,19,3,32,1,1,34,107,112,16,112,107,34,1,1,31,3,18,20,5,1,1,1,34,19,3,10,8,16,29,9,1,3,7,9,92,16,92,10,8,3,1,10,29,16,7,9,3,18,34,2,16,2,91,14,27,12,133,15,15,114,15,15,93,15,15,114,15,15,133,14,27,12,91,2,16,2,34,20,3,7,9,16,30,8,1,3,10,8,92,16,92,7,9,3,1,7,30,16,10,8,3,21,34,1,1,1,5,18,20,3,32,1,1,34,109,112,16,112,109,34,1,1,31,3,21,19,5,1,1,1,1,1,18,26,20,34,18,26,34,1,3,3,2,16,2,3,3,1,34,26,19,34,21,26,19,1,1,1,1,16,14,4,4,27,9,1,1,3,2,18,24,19,2,3,1,1,10,27,4,4,12,16,1,1,49,18,20,10,8,34,21,15,19,1,34,18,20,95,21,19,34,1,18,15,20,34,7,9,21,19,54,15,20,1,3,10,8,1,1,16,104,108,16,3,1,3,16,110,105,16,1,1,7,9,3,1,21,15,34,49,2,1,52,26,1,1,34,116,18,20,2,35,2,21,19,116,34,1,1,26,57,1,2,54,34,1,2,1,1,1,26,15,19,3,109,16,2,2,3,2,2,16,109,3,18,15,26,1,1,1,2,1,112,1,1,2,34,28,34,21,15,15,20,1,3,3,3,1,21,15,15,20,34,28,34,2,1,1,112,1,36,1,1,1,32,1,3,34,1,1,34,1,36,1,34,1,1,34,3,1,31,1,1,1,36,1],"units":[{"position":[12,9],"unit":"infantry","faction":"bh","hp":10},{"position":[14,9],"unit":"infantry","faction":"bh","hp":10},{"position":[12,11],"unit":"infantry","faction":"bh","hp":10},{"position":[14,11],"unit":"infantry","faction":"bh","hp":10}]}
