crates/awbrn-map/tests/snapshots/map_document__162795-property.snap
---
source: crates/awbrn-map/tests/map_document.rs
expression: document.property_preimage()
---
awbrn-map-property-v1
[{"x":1,"y":0,"terrain":36},{"x":8,"y":0,"terrain":34},{"x":11,"y":0,"terrain":34},{"x":13,"y":0,"terrain":36},{"x":15,"y":0,"terrain":34},{"x":18,"y":0,"terrain":34},{"x":25,"y":0,"terrain":36},{"x":0,"y":1,"terrain":112},{"x":4,"y":1,"terrain":34},{"x":6,"y":1,"terrain":34},{"x":20,"y":1,"terrain":34},{"x":22,"y":1,"terrain":34},{"x":26,"y":1,"terrain":112},{"x":0,"y":3,"terrain":34},{"x":1,"y":3,"terrain":39},{"x":4,"y":3,"terrain":42},{"x":8,"y":3,"terrain":34},{"x":13,"y":3,"terrain":35},{"x":18,"y":3,"terrain":34},{"x":22,"y":3,"terrain":47},{"x":25,"y":3,"terrain":44},{"x":26,"y":3,"terrain":34},{"x":0,"y":5,"terrain":39},{"x":5,"y":5,"terrain":34},{"x":10,"y":5,"terrain":34},{"x":13,"y":5,"terrain":95},{"x":16,"y":5,"terrain":34},{"x":21,"y":5,"terrain":34},{"x":26,"y":5,"terrain":44},{"x":5,"y":7,"terrain":34},{"x":8,"y":7,"terrain":34},{"x":18,"y":7,"terrain":34},{"x":21,"y":7,"terrain":34},{"x":10,"y":8,"terrain":34},{"x":12,"y":8,"terrain":112},{"x":14,"y":8,"terrain":112},{"x":16,"y":8,"terrain":34},{"x":0,"y":9,"terrain":34},{"x":12,"y":9,"terrain":92},{"x":14,"y":9,"terrain":92},{"x":26,"y":9,"terrain":34},{"x":3,"y":10,"terrain":91},{"x":7,"y":10,"terrain":133},{"x":10,"y":10,"terrain":114},{"x":13,"y":10,"terrain":93},{"x":16,"y":10,"terrain":114},{"x":19,"y":10,"terrain":133},{"x":23,"y":10,"terrain":91},{"x":0,"y":11,"terrain":34},{"x":12,"y":11,"terrain":92},{"x":14,"y":11,"terrain":92},{"x":26,"y":11,"terrain":34},{"x":10,"y":12,"terrain":34},{"x":12,"y":12,"terrain":112},{"x":14,"y":12,"terrain":112},{"x":16,"y":12,"terrain":34},{"x":5,"y":13,"terrain":34},{"x":8,"y":13,"terrain":34},{"x":18,"y":13,"terrain":34},{"x":21,"y":13,"terrain":34},{"x":0,"y":15,"terrain":49},{"x":5,"y":15,"terrain":34},{"x":10,"y":15,"terrain":34},{"x":13,"y":15,"terrain":95},{"x":16,"y":15,"terrain":34},{"x":21,"y":15,"terrain":34},{"x":26,"y":15,"terrain":54},{"x":0,"y":17,"terrain":34},{"x":1,"y":17,"terrain":49},{"x":4,"y":17,"terrain":52},{"x":8,"y":17,"terrain":34},{"x":13,"y":17,"terrain":35},{"x":18,"y":17,"terrain":34},{"x":22,"y":17,"terrain":57},{"x":25,"y":17,"terrain":54},{"x":26,"y":17,"terrain":34},{"x":0,"y":19,"terrain":112},{"x":4,"y":19,"terrain":34},{"x":6,"y":19,"terrain":34},{"x":20,"y":19,"terrain":34},{"x":22,"y":19,"terrain":34},{"x":26,"y":19,"terrain":112},{"x":1,"y":20,"terrain":36},{"x":8,"y":20,"terrain":34},{"x":11,"y":20,"terrain":34},{"x":13,"y":20,"terrain":36},{"x":15,"y":20,"terrain":34},{"x":18,"y":20,"terrain":34},{"x":25,"y":20,"terrain":36}]
