crates/awbrn-map/tests/snapshots/map_document__162795-unit.snap
---
source: crates/awbrn-map/tests/map_document.rs
expression: document.unit_preimage()
---
awbrn-map-unit-v1
[{"position":[12,9],"unit":"infantry","faction":"bh"},{"position":[14,9],"unit":"infantry","faction":"bh"},{"position":[12,11],"unit":"infantry","faction":"bh"},{"position":[14,11],"unit":"infantry","faction":"bh"}]
