crates/awbrn-map/tests/snapshots/map_document__178597-content.snap
---
source: crates/awbrn-map/tests/map_document.rs
expression: document.content_preimage()
---
awbrn-map-content-v1
{"width":27,"height":8,"terrain":[42,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,47,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,111,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,3,1,1,1,1,1,1,1,1,1,1,1,1,1,102,102,113,102,102,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"units":[{"x":1,"y":0,"unit":"b-copter","faction":"os","hp":10},{"x":2,"y":0,"unit":"b-copter","faction":"os","hp":10},{"x":3,"y":0,"unit":"b-copter","faction":"os","hp":10},{"x":6,"y":0,"unit":"anti-air","faction":"bm","hp":10},{"x":7,"y":0,"unit":"anti-air","faction":"bm","hp":10},{"x":8,"y":0,"unit":"anti-air","faction":"bm","hp":10},{"x":0,"y":1,"unit":"b-copter","faction":"os","hp":10},{"x":1,"y":1,"unit":"b-copter","faction":"os","hp":10},{"x":2,"y":1,"unit":"carrier","faction":"os","hp":10},{"x":3,"y":1,"unit":"fighter","faction":"os","hp":10},{"x":6,"y":1,"unit":"anti-air","faction":"bm","hp":10},{"x":7,"y":1,"unit":"anti-air","faction":"bm","hp":10},{"x":0,"y":2,"unit":"b-copter","faction":"os","hp":10},{"x":2,"y":2,"unit":"bomber","faction":"os","hp":10},{"x":5,"y":2,"unit":"anti-air","faction":"bm","hp":10},{"x":6,"y":2,"unit":"anti-air","faction":"bm","hp":10},{"x":7,"y":2,"unit":"anti-air","faction":"bm","hp":10},{"x":2,"y":3,"unit":"black-bomb","faction":"os","hp":10},{"x":6,"y":3,"unit":"anti-air","faction":"bm","hp":10},{"x":7,"y":3,"unit":"anti-air","faction":"bm","hp":10},{"x":1,"y":4,"unit":"infantry","faction":"os","hp":10},{"x":2,"y":4,"unit":"infantry","faction":"os","hp":10},{"x":3,"y":4,"unit":"infantry","faction":"os","hp":6},{"x":6,"y":4,"unit":"infantry","faction":"bm","hp":10},{"x":12,"y":4,"unit":"piperunner","faction":"bm","hp":10},{"x":1,"y":5,"unit":"t-copter","faction":"os","hp":10},{"x":2,"y":5,"unit":"infantry","faction":"os","hp":4}]}
