crates/awbrn-map/tests/snapshots/map_document__178597-property.snap
---
source: crates/awbrn-map/tests/map_document.rs
expression: document.property_preimage()
---
awbrn-map-property-v1
[{"x":0,"y":0,"terrain":42},{"x":15,"y":1,"terrain":47},{"x":3,"y":3,"terrain":111},{"x":11,"y":4,"terrain":113}]
