crates/awbrn-map/tests/snapshots/map_document__178597-unit.snap
---
source: crates/awbrn-map/tests/map_document.rs
expression: document.unit_preimage()
---
awbrn-map-unit-v1
[{"x":1,"y":0,"unit":"b-copter","faction":"os"},{"x":2,"y":0,"unit":"b-copter","faction":"os"},{"x":3,"y":0,"unit":"b-copter","faction":"os"},{"x":6,"y":0,"unit":"anti-air","faction":"bm"},{"x":7,"y":0,"unit":"anti-air","faction":"bm"},{"x":8,"y":0,"unit":"anti-air","faction":"bm"},{"x":0,"y":1,"unit":"b-copter","faction":"os"},{"x":1,"y":1,"unit":"b-copter","faction":"os"},{"x":2,"y":1,"unit":"carrier","faction":"os"},{"x":3,"y":1,"unit":"fighter","faction":"os"},{"x":6,"y":1,"unit":"anti-air","faction":"bm"},{"x":7,"y":1,"unit":"anti-air","faction":"bm"},{"x":0,"y":2,"unit":"b-copter","faction":"os"},{"x":2,"y":2,"unit":"bomber","faction":"os"},{"x":5,"y":2,"unit":"anti-air","faction":"bm"},{"x":6,"y":2,"unit":"anti-air","faction":"bm"},{"x":7,"y":2,"unit":"anti-air","faction":"bm"},{"x":2,"y":3,"unit":"black-bomb","faction":"os"},{"x":6,"y":3,"unit":"anti-air","faction":"bm"},{"x":7,"y":3,"unit":"anti-air","faction":"bm"},{"x":1,"y":4,"unit":"infantry","faction":"os"},{"x":2,"y":4,"unit":"infantry","faction":"os"},{"x":3,"y":4,"unit":"infantry","faction":"os"},{"x":6,"y":4,"unit":"infantry","faction":"bm"},{"x":12,"y":4,"unit":"piperunner","faction":"bm"},{"x":1,"y":5,"unit":"t-copter","faction":"os"},{"x":2,"y":5,"unit":"infantry","faction":"os"}]
